fixed CSS spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,7 +27,6 @@ body {
   text-align: center;
   display: flex;
   align-items: center;
-  /*flex-direction: row-reverse;*/
   justify-content: flex-start;
   padding-left: 2em;
   padding-right: 2em;
@@ -36,15 +35,12 @@ body {
 .latest div:last-child {
   margin-bottom: 1em;
   height: 100px;
+  margin-top: -10px;
 }
 
-/*.number:nth-child(1), .number:nth-child(3), .number:nth-child(5), .number:nth-child(7) {
-  flex-direction: row-reverse;
-}*/
 
 .title {
   font-size: 18px;
-  /*height: 100%;*/
   width: 80px;
   margin-right: 1em;
   align-self: center;
